--- a/main.html
+++ b/main.html
@@ -7,6 +7,33 @@
 </head>
 
 <body>
+	<table id="grocery" cellspacing="0">
+		<thead>
+			<tr>
+				<td>Items</td>
+				<td>Price</td>
+			</tr>
+		</thead>
+		<tbody id="main-body">
+			<tr>
+				<td class="item">onion</td>
+				<td class="price">40</td>
+			</tr>
+			<tr>
+				<td class="item">Almond</td>
+				<td class="price" data-ns-test="prices">120</td>
+			</tr>
+			<tr>
+				<td class="item">vegetable oil</td>
+				<td class="price" data-ns-test="prices">80</td>
+			</tr>
+			<tr>
+				<td class="item">Beans</td>
+				<td class="price" data-ns-test="prices">30</td>
+			</tr>
+		</tbody>
+	</table>
+	<p id="demo"></p>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
