--- a/main.html
+++ b/main.html
@@ -17,19 +17,19 @@
 		<tbody id="main-body">
 			<tr>
 				<td class="item">onion</td>
-				<td class="price">40</td>
+				<td class="price" data-ns-test="price">40</td>
 			</tr>
 			<tr>
 				<td class="item">Almond</td>
-				<td class="price" data-ns-test="prices">120</td>
+				<td class="price" data-ns-test="price">120</td>
 			</tr>
 			<tr>
 				<td class="item">vegetable oil</td>
-				<td class="price" data-ns-test="prices">80</td>
+				<td class="price" data-ns-test="price">80</td>
 			</tr>
 			<tr>
 				<td class="item">Beans</td>
-				<td class="price" data-ns-test="prices">30</td>
+				<td class="price" data-ns-test="price">30</td>
 			</tr>
 		</tbody>
 	</table>
